refactor: 테스트코드 fixture를 포함하여 전체적으로 개선한다 (#593)
* style: 컨트롤러 어노테이션 순서 통일 (#583)

* test: Fixture 개선 (#583)

* test: Oauth 관련 서비스(OauthService) 테스트코드 개선 (#583)

* test: 음식점 수정 서비스(RestaurantCorrectionService) 테스트코드 개선 (#583)

* test: 음식점 좋아요 서비스(RestaurantLikeService) 테스트코드 개선 (#583)

* test: 음식점 리뷰 좋아요 서비스(RestaurantReviewLikeService) 테스트코드 개선 (#583)

* test: 음식점 리뷰 신고 서비스(RestaurantReviewReportService) 테스트코드 (#583)

* test: 음식점 리뷰(RestaurantReview)에 도메인 로직 추가 & 단위테스트 작성 (#583)

* test: 음식점 리뷰 서비스(RestaurantReviewService) 테스트코드 개선 (#583)

* test: RestaurantService(음식점 서비스) 테스트코드 개선 (#583)

* feat: DAO 슬라이스 테스트를 위한 어노테이션 추가 (#583)

* feat: 셀럽 전체조회를 위한 FindAllCelebResponseDao 작성 (#583)

* feat: CelebQueryService 작성 (#583)

* refactor: SuggestCorrectionRequestCommand -> SuggestCorrectionCommand 이름 변경 (#583)

* refactor: 음식점 좋아요(RestaurantLike)에 비즈니스 로직 작성 (#583)

* refactor: 음식점 리뷰 좋아요에 대한 비즈니스 로직 작성 (#583)

* refactor: 음식점 리뷰 서비스 로직 개선 (#583)

* refactor: 음식점 리뷰 이미지 관련 로직 개선 (#583)

1. 음식점 리뷰 이미지를, 음식점 리뷰에서 관리하도록 연관관계 방향 바꾸기
2. Service에서 MultipartFile에 대한 의존성 제거

* test: 회원 프로필 조회 DAO(OauthMemberProfileResponseDao) 테스트코드 작성 (#583)

* refactor: 멤버 조회용 서비스(MemberQueryService) 모킹하여 테스트하도록 변경 (#583)

* test: 지역으로 음식점 조회 DAO(RestaurantByAddressResponseDao) 테스트코드 작성 (#583)

h2 공간데이터 사용을 위한 작업 모음
1. build.gradle에 'org.orbisgis:h2gis:2.2.0' 추가
2. h2-spatial.sql 추가

* refactor: 법정동 코드 명칭을 RegionCode로 변경 (#583)

* refactor: Restaurant 생성자에서 조회수 등, 초기에 0인 값 받지 않도록 변경 (#583)

* refactor: RestaurantDetailResponseDao 메서드명 변경 (#583)

* test: 음식점 상세조회 DAO(RestaurantDetailResponseDao) 테스트코드 작성 (#583)

* refactor: 좋아요 누른 음식점 조회 DAO 네이밍 변경 LikedRestaurantQueryResponseDao (#583)

* refactor: 조회용 Response에 공통적으로 Query 붙이기, 패키지 구조 통일 (#583)

* refactor: RestaurantReview 메서드 시그니처 변경 (#583)

- 내용, 별점, 이미지를 묶어주기 위해 변경함

* refactor: RestaurantReviewQueryResponse -> RestaurantReviewsQueryResponse 네이밍 변경과, 내부 클래스로 dto 작성 (#583)
